@@ -19,12 +19,14 @@ DIST gitlab-ce-8.12.7.tar.gz 27110532 SHA256 003e497e23f730f4990bdb4b431109f2956
 DIST gitlab-ce-8.13.0.tar.gz 27763918 SHA256 0c4736ec84fe371334a0b7feca34eb6a2a371242c2ed0ba356b201de5c5e4a46 SHA512 e08ce15b6b8658d12c20cb7b522607c6c54880c1e2737f48e4a80f5d3fd8efb10f680b3a4a8c975dbc5237eea2b0f5fef185286d1ea3a7786573fa2bbca4149c WHIRLPOOL 91e4dc8732f3df17ffa81d5fa9ec6b0be8a04c956021ac95c859819643da426b5cafef2d1811cbc3507688179f2645839ae64eac6bb1941fc17076977bdff960
 DIST gitlab-ce-8.13.3.tar.gz 27773077 SHA256 040e43517e10782a0f11b3bfc9c349cec9e48e5c10cf8d46c7e468beb7677101 SHA512 3031798e0c56a7a028a544943304ac84e5a427e40d9db40fe75aba215192f493ee4508d6d99f0a5814ac11a52f8db673d03012cae052b3841c3407c6b9fb83a8 WHIRLPOOL 2a78824adda0aa4006facf0c791b6f0be930eb574a38dda6d58db3cd9331238f50caae4e2e6acb7442a3488b3b9c91239a488063377d6b34befc5a3375c94c7d
 DIST gitlab-ce-8.13.5.tar.gz 27814361 SHA256 05749840b2cf9c39cc54dd88c58571195437811b133379506523df6757c26fec SHA512 9039b46adcff7e4d9ba8029d3b97cedf672179c54c9dc48a91693ed52b2a09b8cdf3dbdfd671e58c2d91f52741bcd4220d75dc896f62cfba798f4bb64931691e WHIRLPOOL 5c6e4db776d5f021aedef7e6a6e6315c7ba01da518b0571aa00037afcad5304ea75e3d130da77644e5ca824653a507c7224207581b440437505ceb0e0d34b628
+DIST gitlab-ce-8.13.6.tar.gz 27816283 SHA256 48f29ab3c33123898502563c764fbbfcc3a3146bccc6793f7129656360f277a5 SHA512 b2928b22431eb974b679b464d0a7ec85d9325b584371f884b174678943a17f8ac8db34a3e1992f0f8cbc4cbf4d3000344aa7513edc2c683fb3a8940375a5ea5f WHIRLPOOL f5c7ea34fa4b659d7c0405983b3fc797c4c7641daf027f9f3d06b6d5b3f9bb9435f200456cace9813584ad6256d6d389fbbd08b7f28a9c29aacdabb5b7dc0c2e
 DIST gitlab-ce-8.14.0_rc2.tar.gz 29323411 SHA256 c97ebc9a6ea0f41968fc7fa294caebacb6013950b42b5274e68956d6d58222d3 SHA512 700b644d0556aae5292ca562a1210e273516bc0022c84d5c4fb6f1edb5538d7d3b607f7bbc89bd43d5c4402bca5703e761a1e6288943a981785a29ac55d81097 WHIRLPOOL 7406b04920db10358f80b141ecbc355e726ac8581d3bf4745e40853cdf4926400d82f4ad6233a4ba059f889af9338bc93c10a612cb3cdb9c4625f64386a612e4
 EBUILD gitlab-ce-8.12.7.ebuild 12068 SHA256 5acdce0ee5f3c6cf20a120758ad0c60ec70574d38cc2ee56037b3789d812edfd SHA512 7daf877280f4a8242fa83e1b70d5cabe99aa8bd547d0b4f9a4921c60c44228f508e39a8a4f751b987078c4d680aaff374a055c8ca5882b12f110b232c0006f4e WHIRLPOOL be51f8c53ac45db3c13f179d447665b536df4848a4c63cf5619d2620fbca7bd2701b861f636235d7e746ee7f560eb084e949288f11dceaaef826c138be321625
 EBUILD gitlab-ce-8.13.0.ebuild 11859 SHA256 b90393b330f1048ea73536071793f1897d62e14773bc170600abb9ab9dc0fcc0 SHA512 31c32936dbe355dc9dae68bb5b726822a9f5222796dd11dc95b8907fbb2e316930a95568061557328a9d87b5b5eded5867a1a8d552cd9041f10054140d461426 WHIRLPOOL 2ce6cf02c5b27fe70f00795c16fa3d20f369ba820f8583c90808ac5d6c1d838425d447caaad67b76ebc64e6a3f1b6866ac2e890566dc71504056c20103b8ad97
 EBUILD gitlab-ce-8.13.3.ebuild 11979 SHA256 b5a243613dbca1645c70b0b76191172d823a1775372172054c653706261dd1e7 SHA512 9121a34bb8f071395f26d0dbb87fb8bae50f00b8b606c1ced4d43d7e9908c7937fc5bd3d15992b34545206bcbf138e2ab1a593df709904b409ad9041b6a62f9a WHIRLPOOL d7c84308560a28e0222da75acad82cda660770acff43b180d40b35e6395f46adc66afb40ce3ba8c73dd76251e89f72b9dff51bc602c82154a1ea974f693104fa
 EBUILD gitlab-ce-8.13.5.ebuild 11979 SHA256 7b16a160712995d17004adbdfed92974f31e83bdbad745f0999e403c7db50090 SHA512 9bad09441979c9ef7bc764cddf3daf02b85b657b21b0b409dcd2257fcbae9691c3afef605ebe3f60eb11bdc61abb0ff6b22b344d41ef549dea7795576deba987 WHIRLPOOL 960d55ed74694e31dedd28307a45cfe6808fd94eb4e79c667d670f84d00a9f6bc72d702e1a59d9325087752e1a2f7ccbfcb290e573e31da0384ed3fa2ae91bae
+EBUILD gitlab-ce-8.13.6.ebuild 11979 SHA256 761411082e2e68f432f913f5c5c969847832d335b1f7843575890ba125542539 SHA512 ab01af577da7a27cee3308c6766a042edbce7f1c472639b9a24b9bef3a7ce37389dd8e32b43cf62b9ce7c20399ccf17fd35f678ea63598b4b06890bfeabded50 WHIRLPOOL cc14b981521f0513108ab4320f2e3d4f210ec0da7373f0f99b35d975003b5e1ff5783c5db5c6b7f29739e795fc73d4744716f81056039eefaf445354bd7cb000
 EBUILD gitlab-ce-8.14.0_rc2.ebuild 11956 SHA256 9f71c449b8ad06ac69a4de8197890aa5148db76d94d201f61b4193c586c1342d SHA512 e64507e0872f21eb0f5435f5aeb8ad34089c5973afd5d234bdeceefd185ce628a28ae4bbc652784941d303d118131b3cd040e6955cf8d5de3d97c55fce2b17ca WHIRLPOOL ab9e79520d8e405c72a60001637ae30e75d24ef29dc3cbd9f403a7b6e33e79e837f1d69a2ca5ce3b6bca80a5ee4f33704341ae7e6ec036cad565a55908caccce
 EBUILD gitlab-ce-9999.ebuild 11913 SHA256 9f3f58ebf1fa7fa7c6b00374e83dda8476116057ee8c6a3ecb5779f0bc7e5254 SHA512 5f2a68f540e26129d9d57a5a72ee924503bc8f8cc89539545aa0ebedf70e42e6104be879eff8cfa65fcde151dad0b4e78523210aee0f9f26549e6279dc76246e WHIRLPOOL 9810dc5e8a1f87601448fae42c8f136e2a9d1ad892357c15590bf53f26b70d3022b383da7b801a51a4ad88ec1f7033f072d294bcc884f614f695e294cfa40e2b
-MISC ChangeLog 10326 SHA256 da12df11f2931226c61e3ee21cbce3a321c8f67f559cdf5ebedf9d5c932261fd SHA512 0abc2fc358e7ea8f342b55ecd9344216bc670387126f5fca4fe2dee37626a0235b615a9441d6a6586339339f6b74e7db9fd56f8554e980c925506a3aa2552e76 WHIRLPOOL bd45f399ddd9eaa633b871c67cf3ad389c6b8b6c7f3969b8673b58591f620d7a6922a1863bbf12388bd8b976c1ab45d1bdb31768077a644c33e8b64c7a390cc5
+MISC ChangeLog 10494 SHA256 24ea4aa1ccc351068da1b0e640ecab7074c6e5a6a4c58364790f1555e316800e SHA512 a9a6d921379ced162b4ac5df044d9d5ef7a84e3b76fd2f68b0f4427b5152f2da1d70d70c4b6d558e238206bf4d9ca8cad408a68b3df7f90ce73af2661198f136 WHIRLPOOL 8af4c27256e738d23d9376aa125810cb4aa8ba6ccafd5e43a999ee88ccbf10a795ebabe60a6fa99dbf51e1fbb75ae9e8c0256c7e601730f8ad8127f629ad3bfd
 MISC metadata.xml 559 SHA256 6c3f48d3ef57c97bf27790f33ee04bd8de8b01597caa8a2a7a473d6d0a3c5759 SHA512 5aa340b5429795d84cd106ee673fd55a42fd4b0d3299d6b95c6a3e3d50812a9620820a4de5c57d5048af0c3ecec7f575d5856d2f7fadc210aadcbdd4dd040fe1 WHIRLPOOL f3d7b8c0522e09f5156e6bb446bb74e4c75f5da4495ca2ece1eb78afce59307abe01bf3c5dd5344278fcac9e334300d912031c806f51b981591c01bc3588c6f3
