@@ -1,3 +1,8 @@
+*gitlab-ce-8.13.6 (17 Nov 2016)
+
+  17 Nov 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.13.6.ebuild:
+  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.13.6
+
 *gitlab-ce-8.13.5 (11 Nov 2016)
 *gitlab-ce-8.14.0_rc1 (11 Nov 2016)
 
